minimize warnings, small refactorings